created separate modules from compa and compa_ccm

--- a/nbs/01_wrds/00_wrds_api.ipynb
+++ b/nbs/01_wrds/00_wrds_api.ipynb
@@ -624,7 +624,7 @@
     "            else:\n",
     "                full_df = pd.DataFrame()\n",
     "                for chunk in df:\n",
-    "                    full_df = pd.concat([full_df, chunk])\n",
+    "                    full_df = pd.concat([full_df, chunk], ignore_index=True)\n",
     "                return full_df\n",
     "        except sa.exc.ProgrammingError as e:\n",
     "            raise e\n",
@@ -866,30 +866,6 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1160</th>\n",
-       "      <td>2023-03-01</td>\n",
-       "      <td>0.0251</td>\n",
-       "      <td>-0.0551</td>\n",
-       "      <td>-0.0885</td>\n",
-       "      <td>0.0036</td>\n",
-       "      <td>2023.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>-0.0249</td>\n",
-       "      <td>2023-03-31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1161</th>\n",
-       "      <td>2023-04-01</td>\n",
-       "      <td>0.0061</td>\n",
-       "      <td>-0.0335</td>\n",
-       "      <td>-0.0004</td>\n",
-       "      <td>0.0035</td>\n",
-       "      <td>2023.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>0.0163</td>\n",
-       "      <td>2023-04-28</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>1162</th>\n",
        "      <td>2023-05-01</td>\n",
        "      <td>0.0035</td>\n",
@@ -910,24 +886,48 @@
        "      <td>0.0040</td>\n",
        "      <td>2023.0</td>\n",
        "      <td>6.0</td>\n",
-       "      <td>-0.0239</td>\n",
+       "      <td>-0.0237</td>\n",
        "      <td>2023-06-30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1164</th>\n",
        "      <td>2023-07-01</td>\n",
        "      <td>0.0321</td>\n",
-       "      <td>0.0207</td>\n",
-       "      <td>0.0413</td>\n",
+       "      <td>0.0208</td>\n",
+       "      <td>0.0411</td>\n",
        "      <td>0.0045</td>\n",
        "      <td>2023.0</td>\n",
        "      <td>7.0</td>\n",
-       "      <td>-0.0406</td>\n",
+       "      <td>-0.0398</td>\n",
        "      <td>2023-07-31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1165</th>\n",
+       "      <td>2023-08-01</td>\n",
+       "      <td>-0.0239</td>\n",
+       "      <td>-0.0316</td>\n",
+       "      <td>-0.0106</td>\n",
+       "      <td>0.0045</td>\n",
+       "      <td>2023.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0.0377</td>\n",
+       "      <td>2023-08-31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1166</th>\n",
+       "      <td>2023-09-01</td>\n",
+       "      <td>-0.0524</td>\n",
+       "      <td>-0.0251</td>\n",
+       "      <td>0.0152</td>\n",
+       "      <td>0.0043</td>\n",
+       "      <td>2023.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0.0024</td>\n",
+       "      <td>2023-09-29</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1165 rows × 9 columns</p>\n",
+       "<p>1167 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -938,11 +938,11 @@
        "3     1926-10-01 -0.0324 -0.0009  0.0070  0.0032  1926.0   10.0     NaN   \n",
        "4     1926-11-01  0.0253 -0.0010 -0.0051  0.0031  1926.0   11.0     NaN   \n",
        "...          ...     ...     ...     ...     ...     ...    ...     ...   \n",
-       "1160  2023-03-01  0.0251 -0.0551 -0.0885  0.0036  2023.0    3.0 -0.0249   \n",
-       "1161  2023-04-01  0.0061 -0.0335 -0.0004  0.0035  2023.0    4.0  0.0163   \n",
        "1162  2023-05-01  0.0035  0.0161 -0.0772  0.0036  2023.0    5.0 -0.0063   \n",
-       "1163  2023-06-01  0.0646  0.0154 -0.0026  0.0040  2023.0    6.0 -0.0239   \n",
-       "1164  2023-07-01  0.0321  0.0207  0.0413  0.0045  2023.0    7.0 -0.0406   \n",
+       "1163  2023-06-01  0.0646  0.0154 -0.0026  0.0040  2023.0    6.0 -0.0237   \n",
+       "1164  2023-07-01  0.0321  0.0208  0.0411  0.0045  2023.0    7.0 -0.0398   \n",
+       "1165  2023-08-01 -0.0239 -0.0316 -0.0106  0.0045  2023.0    8.0  0.0377   \n",
+       "1166  2023-09-01 -0.0524 -0.0251  0.0152  0.0043  2023.0    9.0  0.0024   \n",
        "\n",
        "          dateff  \n",
        "0     1926-07-31  \n",
@@ -951,13 +951,13 @@
        "3     1926-10-30  \n",
        "4     1926-11-30  \n",
        "...          ...  \n",
-       "1160  2023-03-31  \n",
-       "1161  2023-04-28  \n",
        "1162  2023-05-31  \n",
        "1163  2023-06-30  \n",
        "1164  2023-07-31  \n",
+       "1165  2023-08-31  \n",
+       "1166  2023-09-29  \n",
        "\n",
-       "[1165 rows x 9 columns]"
+       "[1167 rows x 9 columns]"
       ]
      },
      "execution_count": null,
