--- a/nbs/01_wrds/03_compa_ccm.ipynb
+++ b/nbs/01_wrds/03_compa_ccm.ipynb
@@ -1,12 +1,13 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# compa\n",
     "\n",
-    "> Retrieve and process data from WRDS Compustat Annual"
+    "> Retrieve and process data from WRDS CRSP/Compustat Merged (CCM) Fundamentals Annual"
    ]
   },
   {
@@ -15,7 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| default_exp wrds.compa"
+    "#| default_exp wrds.compa_ccm"
    ]
   },
   {
@@ -46,12 +47,13 @@
     "URL = 'https://wrds-www.wharton.upenn.edu/pages/get-data/center-research-security-prices-crsp/annual-update/crspcompustat-merged/fundamentals-annual/'\n",
     "LIBRARY = 'comp'\n",
     "TABLE = 'funda'\n",
-    "COMPANY_TABLE = 'company' #contains some header information that is missing from comp.funda (e.g. sic and naics) \n",
+    "LINK_LIBRARY = 'crsp'\n",
+    "LINK_TABLE = 'ccmxpf_lnkhist'\n",
     "FREQ = 'A'\n",
     "MIN_YEAR = 1950\n",
     "MAX_YEAR = None\n",
-    "ENTITY_ID_IN_RAW_DSET = 'gvkey'\n",
-    "ENTITY_ID_IN_CLEAN_DSET = 'gvkey'\n",
+    "ENTITY_ID_IN_RAW_DSET = 'permno'\n",
+    "ENTITY_ID_IN_CLEAN_DSET = 'permno'\n",
     "TIME_VAR_IN_RAW_DSET = 'datadate'\n",
     "TIME_VAR_IN_CLEAN_DSET = 'Adate'"
    ]
@@ -205,14 +207,16 @@
     "        start_date: str=None, # Start date in MM/DD/YYYY format\n",
     "        end_date: str=None #End date in MM/DD/YYYY format\n",
     ") -> pd.DataFrame:\n",
-    "    \"\"\"Downloads `vars` from `start_date` to `end_date` from WRDS `{LIBRARY}.{TABLE}` library \"\"\"\n",
+    "    \"\"\"Downloads `vars` from `start_date` to `end_date` from WRDS `{LIBRARY}.{TABLE}` library and adds PERMNO and PERMCO as in CCM\"\"\"\n",
     " \n",
     "    vars = parse_varlist(vars, prefix='a.')\n",
     "\n",
-    "    sql_string=f\"\"\"SELECT  {vars} , b.sic as sic_header, b.naics as naics_header  \n",
-    "                    FROM {LIBRARY}.{TABLE} as a \n",
-    "                    LEFT JOIN compa.company as b ON a.gvkey = b.gvkey\n",
-    "                    WHERE  indfmt='INDL' AND datafmt='STD' AND popsrc='D' AND consol='C'\n",
+    "    sql_string=f\"\"\"SELECT b.lpermno as permno, b.lpermco as permco, b.liid, b.linkprim as linkprim, {vars}\n",
+    "                    FROM {LIBRARY}.{TABLE} AS a\n",
+    "                    INNER JOIN {LINK_LIBRARY}.{LINK_TABLE} AS b ON a.gvkey = b.gvkey \n",
+    "                    WHERE datadate BETWEEN b.linkdt AND COALESCE(b.linkenddt, CURRENT_DATE)\n",
+    "                            AND b.linktype IN ('LU','LC') \n",
+    "                            AND indfmt='INDL' AND datafmt='STD' AND popsrc='D' AND consol='C'\n",
     "                \"\"\"\n",
     "    if start_date is not None: sql_string += r\" AND datadate >= %(start_date)s\"\n",
     "    if end_date is not None: sql_string += r\" AND datadate <= %(end_date)s\"\n",
@@ -223,72 +227,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>gvkey</th>\n",
-       "      <th>iid</th>\n",
-       "      <th>datadate</th>\n",
-       "      <th>at</th>\n",
-       "      <th>indfmt</th>\n",
-       "      <th>sich</th>\n",
-       "      <th>naicsh</th>\n",
-       "      <th>sic_header</th>\n",
-       "      <th>naics_header</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>001000</td>\n",
-       "      <td>01</td>\n",
-       "      <td>1961-12-31</td>\n",
-       "      <td>None</td>\n",
-       "      <td>INDL</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>3089</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    gvkey iid    datadate    at indfmt  sich naicsh sic_header naics_header\n",
-       "0  001000  01  1961-12-31  None   INDL  None   None       3089         None"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "m = get_raw_data(['at','indfmt','sich','naicsh'],nrows=1)\n",
-    "m"
+    "The `get_raw_data` function will produce identical results to the ones we would obtain if we used the WRDS website (with the default options unchanged). \n",
+    "\n",
+    "It results in no `permno-datadate` duplicates, but there is a small number of `gvkey-datadate` duplicates (about 1% of the data) because each `permno` maps to a unique `gvkey+iid` value and some gvkeys have multiple share classes (different iid's). \n",
+    "\n",
+    "If we restrict ourselves to primary securities, i.e. `linkprim in ('P','C')` (which retains 99% of the data), this results in unique `gvkey-datadate` records which is why we use it as the default option in the `process_raw_data` function."
    ]
   },
   {
@@ -317,17 +263,19 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>permno</th>\n",
+       "      <th>permco</th>\n",
+       "      <th>liid</th>\n",
+       "      <th>linkprim</th>\n",
        "      <th>gvkey</th>\n",
        "      <th>datadate</th>\n",
        "      <th>fyear</th>\n",
        "      <th>indfmt</th>\n",
        "      <th>consol</th>\n",
        "      <th>popsrc</th>\n",
-       "      <th>datafmt</th>\n",
-       "      <th>tic</th>\n",
-       "      <th>cusip</th>\n",
-       "      <th>conm</th>\n",
        "      <th>...</th>\n",
+       "      <th>prcc_f</th>\n",
+       "      <th>prch_f</th>\n",
        "      <th>prcl_f</th>\n",
        "      <th>adjex_f</th>\n",
        "      <th>rank</th>\n",
@@ -336,51 +284,49 @@
        "      <th>auopic</th>\n",
        "      <th>ceoso</th>\n",
        "      <th>cfoso</th>\n",
-       "      <th>sic_header</th>\n",
-       "      <th>naics_header</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>25881.0</td>\n",
+       "      <td>23369.0</td>\n",
+       "      <td>01</td>\n",
+       "      <td>P</td>\n",
        "      <td>001000</td>\n",
-       "      <td>1961-12-31</td>\n",
-       "      <td>1961.0</td>\n",
+       "      <td>1970-12-31</td>\n",
+       "      <td>1970.0</td>\n",
        "      <td>INDL</td>\n",
        "      <td>C</td>\n",
        "      <td>D</td>\n",
-       "      <td>STD</td>\n",
-       "      <td>AE.2</td>\n",
-       "      <td>000032102</td>\n",
-       "      <td>A &amp; E PLASTIK PAK INC</td>\n",
        "      <td>...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>3.341831</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.875</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
-       "      <td>3089</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
        "      <td>None</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1 rows × 950 columns</p>\n",
+       "<p>1 rows × 952 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    gvkey    datadate   fyear indfmt consol popsrc datafmt   tic      cusip  \\\n",
-       "0  001000  1961-12-31  1961.0   INDL      C      D     STD  AE.2  000032102   \n",
+       "    permno   permco liid linkprim   gvkey    datadate   fyear indfmt consol  \\\n",
+       "0  25881.0  23369.0   01        P  001000  1970-12-31  1970.0   INDL      C   \n",
        "\n",
-       "                    conm  ... prcl_f   adjex_f  rank    au  auop  auopic  \\\n",
-       "0  A & E PLASTIK PAK INC  ...   None  3.341831  None  None  None    None   \n",
+       "  popsrc  ... prcc_f  prch_f prcl_f adjex_f  rank    au  auop auopic  ceoso  \\\n",
+       "0      D  ...   10.0  10.875    7.5     1.0  None  None  None   None   None   \n",
        "\n",
-       "  ceoso cfoso sic_header naics_header  \n",
-       "0  None  None       3089         None  \n",
+       "   cfoso  \n",
+       "0   None  \n",
        "\n",
-       "[1 rows x 950 columns]"
+       "[1 rows x 952 columns]"
       ]
      },
      "execution_count": null,
@@ -430,13 +376,15 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>permno</th>\n",
+       "      <th>permco</th>\n",
+       "      <th>liid</th>\n",
+       "      <th>linkprim</th>\n",
        "      <th>gvkey</th>\n",
        "      <th>iid</th>\n",
        "      <th>datadate</th>\n",
        "      <th>at</th>\n",
        "      <th>lt</th>\n",
-       "      <th>sic_header</th>\n",
-       "      <th>naics_header</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -446,7 +394,7 @@
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [gvkey, iid, datadate, at, lt, sic_header, naics_header]\n",
+       "Columns: [permno, permco, liid, linkprim, gvkey, iid, datadate, at, lt]\n",
        "Index: []"
       ]
      },
@@ -496,17 +444,19 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>permno</th>\n",
+       "      <th>permco</th>\n",
+       "      <th>liid</th>\n",
+       "      <th>linkprim</th>\n",
        "      <th>gvkey</th>\n",
        "      <th>iid</th>\n",
        "      <th>datadate</th>\n",
        "      <th>cusip</th>\n",
        "      <th>cik</th>\n",
        "      <th>tic</th>\n",
-       "      <th>fyear</th>\n",
-       "      <th>fyr</th>\n",
-       "      <th>naicsh</th>\n",
-       "      <th>sich</th>\n",
        "      <th>...</th>\n",
+       "      <th>intan</th>\n",
+       "      <th>pi</th>\n",
        "      <th>txfo</th>\n",
        "      <th>pifo</th>\n",
        "      <th>xpp</th>\n",
@@ -515,22 +465,20 @@
        "      <th>ap</th>\n",
        "      <th>xacc</th>\n",
        "      <th>itcb</th>\n",
-       "      <th>sic_header</th>\n",
-       "      <th>naics_header</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>0 rows × 85 columns</p>\n",
+       "<p>0 rows × 87 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [gvkey, iid, datadate, cusip, cik, tic, fyear, fyr, naicsh, sich, exchg, lt, at, txditc, pstkl, pstkrv, pstk, csho, ajex, rdip, act, dvc, xad, seq, che, lct, dlc, ib, dvp, txdi, dp, txp, oancf, ivncf, fincf, dltt, mib, ceq, invt, cogs, revt, sale, capx, xrd, txdb, prcc_f, sstk, prstkc, dltis, dltr, emp, dd1, ppegt, ppent, xint, txt, sppe, gdwl, xrent, re, dvpsx_f, tstk, wcap, rect, xsga, aqc, oibdp, dpact, fic, ni, ivao, ivst, dv, intan, pi, txfo, pifo, xpp, drc, drlt, ap, xacc, itcb, sic_header, naics_header]\n",
+       "Columns: [permno, permco, liid, linkprim, gvkey, iid, datadate, cusip, cik, tic, fyear, fyr, naicsh, sich, exchg, lt, at, txditc, pstkl, pstkrv, pstk, csho, ajex, rdip, act, dvc, xad, seq, che, lct, dlc, ib, dvp, txdi, dp, txp, oancf, ivncf, fincf, dltt, mib, ceq, invt, cogs, revt, sale, capx, xrd, txdb, prcc_f, sstk, prstkc, dltis, dltr, emp, dd1, ppegt, ppent, xint, txt, sppe, gdwl, xrent, re, dvpsx_f, tstk, wcap, rect, xsga, aqc, oibdp, dpact, fic, ni, ivao, ivst, dv, intan, pi, txfo, pifo, xpp, drc, drlt, ap, xacc, itcb]\n",
        "Index: []\n",
        "\n",
-       "[0 rows x 85 columns]"
+       "[0 rows x 87 columns]"
       ]
      },
      "execution_count": null,
@@ -552,13 +500,14 @@
     "#| export\n",
     "def process_raw_data(\n",
     "        df: pd.DataFrame=None,  # Must contain `permno` and `datadate` columns   \n",
+    "        linkprim_filter: list=['P','C'],      \n",
     "        clean_kwargs: dict={},  # Params to pass to `pdm.setup_panel` other than `panel_ids`, `time_var`, and `freq`\n",
     ") -> pd.DataFrame:\n",
     "    \"\"\"Applies `pandasmore.setup_panel` to `df`\"\"\"\n",
     "\n",
-    "    df = pdm.setup_panel(df, panel_ids=ENTITY_ID_IN_RAW_DSET, time_var=TIME_VAR_IN_RAW_DSET, freq=FREQ, \n",
-    "                         panel_ids_toint=False,\n",
-    "                         **clean_kwargs)\n",
+    "    if linkprim_filter: df = df.loc[df['linkprim'].isin(linkprim_filter)].copy()\n",
+    "\n",
+    "    df = pdm.setup_panel(df, panel_ids=ENTITY_ID_IN_RAW_DSET, time_var=TIME_VAR_IN_RAW_DSET, freq=FREQ, **clean_kwargs)\n",
     "    return df "
    ]
   },
@@ -601,15 +550,17 @@
        "      <th></th>\n",
        "      <th>datadate</th>\n",
        "      <th>dtdate</th>\n",
+       "      <th>permco</th>\n",
+       "      <th>liid</th>\n",
+       "      <th>linkprim</th>\n",
+       "      <th>gvkey</th>\n",
        "      <th>iid</th>\n",
        "      <th>cusip</th>\n",
        "      <th>cik</th>\n",
        "      <th>tic</th>\n",
-       "      <th>fyear</th>\n",
-       "      <th>fyr</th>\n",
-       "      <th>naicsh</th>\n",
-       "      <th>sich</th>\n",
        "      <th>...</th>\n",
+       "      <th>intan</th>\n",
+       "      <th>pi</th>\n",
        "      <th>txfo</th>\n",
        "      <th>pifo</th>\n",
        "      <th>xpp</th>\n",
@@ -618,11 +569,9 @@
        "      <th>ap</th>\n",
        "      <th>xacc</th>\n",
        "      <th>itcb</th>\n",
-       "      <th>sic_header</th>\n",
-       "      <th>naics_header</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>gvkey</th>\n",
+       "      <th>permno</th>\n",
        "      <th>Adate</th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -650,15 +599,15 @@
        "  <tbody>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>0 rows × 85 columns</p>\n",
+       "<p>0 rows × 87 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [datadate, dtdate, iid, cusip, cik, tic, fyear, fyr, naicsh, sich, exchg, lt, at, txditc, pstkl, pstkrv, pstk, csho, ajex, rdip, act, dvc, xad, seq, che, lct, dlc, ib, dvp, txdi, dp, txp, oancf, ivncf, fincf, dltt, mib, ceq, invt, cogs, revt, sale, capx, xrd, txdb, prcc_f, sstk, prstkc, dltis, dltr, emp, dd1, ppegt, ppent, xint, txt, sppe, gdwl, xrent, re, dvpsx_f, tstk, wcap, rect, xsga, aqc, oibdp, dpact, fic, ni, ivao, ivst, dv, intan, pi, txfo, pifo, xpp, drc, drlt, ap, xacc, itcb, sic_header, naics_header]\n",
+       "Columns: [datadate, dtdate, permco, liid, linkprim, gvkey, iid, cusip, cik, tic, fyear, fyr, naicsh, sich, exchg, lt, at, txditc, pstkl, pstkrv, pstk, csho, ajex, rdip, act, dvc, xad, seq, che, lct, dlc, ib, dvp, txdi, dp, txp, oancf, ivncf, fincf, dltt, mib, ceq, invt, cogs, revt, sale, capx, xrd, txdb, prcc_f, sstk, prstkc, dltis, dltr, emp, dd1, ppegt, ppent, xint, txt, sppe, gdwl, xrent, re, dvpsx_f, tstk, wcap, rect, xsga, aqc, oibdp, dpact, fic, ni, ivao, ivst, dv, intan, pi, txfo, pifo, xpp, drc, drlt, ap, xacc, itcb]\n",
        "Index: []\n",
        "\n",
-       "[0 rows x 85 columns]"
+       "[0 rows x 87 columns]"
       ]
      },
      "execution_count": null,
@@ -682,9 +631,6 @@
     "             ) -> pd.DataFrame:\n",
     "\n",
     "    out = pd.DataFrame(index=df.index)\n",
-    "\n",
-    "    out['sic_full'] = np.where(df['sich'].isna(), df['sic_header'], df['sich'])\n",
-    "    out['naics_full'] = np.where(df['naicsh'].isna(), df['naics_header'], df['sich'])\n",
     "\n",
     "    out['lag_at'] = pdm.lag(df['at'])\n",
     "\n",
@@ -775,8 +721,6 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th></th>\n",
-       "      <th>sic_full</th>\n",
-       "      <th>naics_full</th>\n",
        "      <th>lag_at</th>\n",
        "      <th>pstk0</th>\n",
        "      <th>pref_stock</th>\n",
@@ -785,6 +729,8 @@
        "      <th>bookeq_w_itcb</th>\n",
        "      <th>tobinq</th>\n",
        "      <th>equityiss_tot</th>\n",
+       "      <th>equityiss_cfs</th>\n",
+       "      <th>debtiss_tot</th>\n",
        "      <th>...</th>\n",
        "      <th>cflow_is</th>\n",
        "      <th>cflow_cfs</th>\n",
@@ -798,7 +744,7 @@
        "      <th>repurchases_2la</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>gvkey</th>\n",
+       "      <th>permno</th>\n",
        "      <th>Adate</th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -826,15 +772,15 @@
        "  <tbody>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>0 rows × 32 columns</p>\n",
+       "<p>0 rows × 30 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [sic_full, naics_full, lag_at, pstk0, pref_stock, shreq, bookeq, bookeq_w_itcb, tobinq, equityiss_tot, equityiss_cfs, debtiss_tot, debtiss_cfs, debtiss_bs, equityiss_tot_2la, equityiss_cfs_2la, debtiss_tot_2la, debtiss_cfs_2la, debtiss_bs_2la, ppent_pch, capx_2la, roa, cflow_is, cflow_cfs, cflow_full, cflow_is_2la, cflow_cfs_2la, cflow_full_2la, cash_2a, booklev, dividends_2la, repurchases_2la]\n",
+       "Columns: [lag_at, pstk0, pref_stock, shreq, bookeq, bookeq_w_itcb, tobinq, equityiss_tot, equityiss_cfs, debtiss_tot, debtiss_cfs, debtiss_bs, equityiss_tot_2la, equityiss_cfs_2la, debtiss_tot_2la, debtiss_cfs_2la, debtiss_bs_2la, ppent_pch, capx_2la, roa, cflow_is, cflow_cfs, cflow_full, cflow_is_2la, cflow_cfs_2la, cflow_full_2la, cash_2a, booklev, dividends_2la, repurchases_2la]\n",
        "Index: []\n",
        "\n",
-       "[0 rows x 32 columns]"
+       "[0 rows x 30 columns]"
       ]
      },
      "execution_count": null,
@@ -858,7 +804,13 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "python3",
+   "language": "python",
+   "name": "python3"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 2
 }
