--- a/nbs/01_wrds/linking.ipynb
+++ b/nbs/01_wrds/linking.ipynb
@@ -59,7 +59,23 @@
     "\n",
     "- Because TICKERs and CUSIPs change over time, most datasets use permanent identifiers to indicate the same securities and companies. For example, CRSP employs PERMNO to track stocks, Compustat uses GVKEY to follow companies, and a combination of GVKEY and IID is used to track securities. As indicated in the preceding table, both PERMNO and GVKEY (+IID) remain the same, regardless of changes in TICKER, CUSIP, and company names.\n",
     "\n",
-    "- The CRSP/Compustat Merged Database (CCM) is comprised of CRSP and Compustat data, together with the link and link-history references between these two databases. The key product of CCM is a permanent identifier linking table (PERMNO to GVKEY+IID), though CCM is often wrongly mistaken as the merged product of CRSP stock market data with Compustat accounting data. From an end user’s perspective, CCM only adds a link of PERMNO and PERMCO to the Compustat database, so that Compustat items can be searched by CRSP identifiers.\n"
+    "- The CRSP/Compustat Merged Database (CCM) is comprised of CRSP and Compustat data, together with the link and link-history references between these two databases. The key product of CCM is a permanent identifier linking table (PERMNO to GVKEY+IID), though CCM is often wrongly mistaken as the merged product of CRSP stock market data with Compustat accounting data. From an end user’s perspective, CCM only adds a link of PERMNO and PERMCO to the Compustat database, so that Compustat items can be searched by CRSP identifiers.\n",
+    "\n",
+    "\n",
+    "LinkType: A code describing the connection between the CRSP and Compustat data.\n",
+    "\n",
+    "- LU: Link research complete. Standard connection between databases.\n",
+    "- LC: Non-researched link to issue by CUSIP.\n",
+    "- LD: Duplicate link to a security. Another GVKEY/IID is a better link to that CRSP record.\n",
+    "\n",
+    "LinkPrim: Primary issue indicator for the link.\n",
+    "\n",
+    "- P: Primary, identified by Compustat in monthly security data.\n",
+    "- C: Primary, assigned by CRSP to resolve ranges of overlapping or missing primary markers from Compustat in order to produce one primary security throughout the company history.\n",
+    "\n",
+    "LINKDT: The first effective date of the link.\n",
+    "\n",
+    "LINKENDDT: The last date when the link is valid. For a currently valid link, LINKENDDT is set to a NULL value (.E in SAS format)."
    ]
   },
   {
