--- a/nbs/02_papers/hassan_etal_2019.ipynb
+++ b/nbs/02_papers/hassan_etal_2019.ipynb
@@ -356,13 +356,13 @@
     "def process_raw_data(\n",
     "        df: pd.DataFrame=None, # If None, will download using `download_raw`\n",
     "        gvkey_permno_link: bool|pd.DataFrame=True, # Whether to download permno or not. If DataFrame, must contain `permno`, `gvkey`, and `Qdate`\n",
-    "        how: str='inner' # How to merge permno into `df` if `gvkey_permno_link` is not False\n",
+    "        how: str='left' # How to merge permno into `df` if `gvkey_permno_link` is not False\n",
     ") -> pd.DataFrame:\n",
     "    \"\"\"Converts `gvkey` to string and applies `pandasmore.setup_panel`. Adds `permno` if `gvkey_permno_link` is not False.\"\"\"\n",
     "\n",
     "    df = df.copy()\n",
     "\n",
-    "    df['gvkey'] = df['gvkey'].astype('string').str.zfill(6)\n",
+    "    df['gvkey'] = df['gvkey'].astype('string').str.zfill(6) #prepend 0's up to len 6\n",
     "    df['date'] = df['date'].astype('string')\n",
     "\n",
     "    # Format date variable so it can be converted into datetime (as the last day of the quarter)\n",
